--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=MicroIrradiation
 application.vendor=sao
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -64,10 +65,13 @@ file.reference.TSFProto-SVN.jar=C:\\Program Files\\Micro-Manager-1.4\\plugins\\M
 file.reference.xalan-2.7.1.jar=C:\\Program Files\\Micro-Manager-1.4\\plugins\\Micro-Manager\\xalan-2.7.1.jar
 file.reference.xml-apis-1.3.04.jar=C:\\Program Files\\Micro-Manager-1.4\\plugins\\Micro-Manager\\xml-apis-1.3.04.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.ij.jar}:\
     ${file.reference.MMCoreJ.jar}:\
+    ${file.reference.MMJ_.jar}:\
     ${file.reference.TSFProto-SVN.jar}:\
     ${file.reference.clojure-1.3.0.jar}:\
     ${file.reference.clooj-0.2.7.jar}:\
@@ -98,10 +102,9 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.6.jar}:\
     ${file.reference.swingx-0.9.5.jar}:\
     ${file.reference.xalan-2.7.1.jar}:\
-    ${file.reference.xml-apis-1.3.04.jar}:\
-    ${file.reference.MMJ_.jar}
+    ${file.reference.xml-apis-1.3.04.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
@@ -124,10 +127,27 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=ij.ImageJ
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
-platform.active=JDK_1.6
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -140,4 +160,5 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.Micro-Manager.dir=${file.reference.plugins-Micro-Manager}
 test.src.dir=test
